fix. int64 issue in scm oas